# cv_ceramic_defeat_detection

./: .gitignore  .gitignore_1  README.md  app.py  documentation.md  main.py  non-deep-learning-pipeline-for-ceramic-tile-defect-detection.md  pyproject.toml
models/: feature_schema.joblib  training_report.json
mvp/: Project_Implementation_Plan.md  README.md  app.py  generate_sample.py  scanner_mvp.py
outputs/reports/: evaluation.json
rule_based_working/: app.py
rule_based_working/outputs/predictions/: rule_pipeline_best_valid.json  rule_pipeline_test_600_tuned_defaults.json  rule_pipeline_train_600_tuned_defaults.json  rule_pipeline_valid.json  rule_pipeline_valid_smoke.json  smoke_predict_only.json  smoke_test_predictions.json
rule_based_working/outputs/reports/: train_svm_150_crack_images_report.json  train_svm_report.json  train_svm_smoke_report.json
rule_based_working/outputs/reports/eval_150_crack_images/: metrics.json  per_image_iou_0.25.csv  per_image_iou_0.50.csv
rule_based_working/outputs/reports/rule_pipeline_sweep_smoke/: best_config.json  best_metrics.json  best_predictions.json  sweep_results.json  top_configs.json
rule_based_working/outputs/reports/rule_pipeline_sweep_valid_200/: best_config.json  best_metrics.json  best_predictions.json  sweep_results.json  top_configs.json
rule_based_working/outputs/reports/rule_pipeline_sweep_valid_full/: best_config.json  (+3 more)
src/: __init__.py  candidates.py  coco.py  config.py  evaluate.py  features.py  grid.py  matching.py  model.py  predict.py  preprocess.py  train_model.py  visualize.py
(+8 files in other folders)
