[project]
name = "ceramic-tile-defect-detection"
version = "0.1.0"
description = "Classical computer vision app for ceramic tile defect detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.4",
    "matplotlib>=3.9",
    "numpy>=1.26",
    "opencv-python>=5.0.0.93",
    "pandas>=2.2",
    "pillow>=10.4",
    "scikit-image>=0.24",
    "scikit-learn>=1.5",
    "streamlit>=1.36",
    "supervision>=0.29.1",
]
